# machine-learning-zoomcamp-homework

./: marketing.py  pyproject.toml  train.py  workshop-uv-fastapi.ipynb
Midterm project/: notebook.ipynb
extra/: Dockerfile  ping.py  predict.py
homework 1/: homework1.ipynb
homework 10/: deployment.yaml  service.yaml
homework 2/: homework2.ipynb
homework 3/: homeworl3.ipynb
homework 4/: homework4.ipynb
homework 5/: Dockerfile  app.py  predict.py  pyproject.toml
homework 6/: homework6.ipynb
homework 8/: notebook.ipynb
homework 9/: Docker  notebook.ipynb
